DPNG-3673 Fix for wrapping text in environment details in Firefox

--- a/app/ui/app/applications/applications.scss
+++ b/app/ui/app/applications/applications.scss
@@ -51,6 +51,7 @@
     list-style: none;
     padding: 0;
     word-break: break-all;
+    word-wrap: break-word;
 
     span {
       font-weight: bold;
